--- a/자기소개.html
+++ b/자기소개.html
@@ -61,7 +61,7 @@
               <a href="./tech-stack/css.html"> CSS </a>
             </li>
             <li>
-              <a href="./tech-stack/javascript.html">
+              <a href="./teh-stack/javascript.html">
                 JavaScript
               </a>
             </li>
